--- a/packages.config
+++ b/packages.config
@@ -5,7 +5,7 @@
   <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net462" />
   <package id="EPPlus" version="4.1.0" targetFramework="net462" />
   <package id="Geocoding.net" version="3.6.0" targetFramework="net462" />
-  <package id="GeoCoordinate" version="2.0.1" targetFramework="net462" />
+  <package id="GeoCoordinate.NetStandard1" version="1.0.0" targetFramework="net462" />
   <package id="Google.Protobuf" version="3.2.0" targetFramework="net462" />
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.0" targetFramework="net462" />
   <package id="LiteDB" version="2.0.4" targetFramework="net462" />
