--- a/packages.config
+++ b/packages.config
@@ -13,13 +13,13 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json.Schema" version="2.0.8" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json.Schema" version="2.0.9" targetFramework="net462" />
   <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="net462" />
   <package id="S2Geometry" version="1.0.3" targetFramework="net462" />
-  <package id="Selenium.Support" version="3.2.0" targetFramework="net462" />
-  <package id="Selenium.WebDriver" version="3.2.0" targetFramework="net462" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.27.0" targetFramework="net462" />
+  <package id="Selenium.Support" version="3.3.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver" version="3.3.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.28.0" targetFramework="net462" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
@@ -29,6 +29,8 @@
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net462" />
