Clean up socket logic

--- a/PoGo.NecroBot.Logic.csproj
+++ b/PoGo.NecroBot.Logic.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -119,6 +119,9 @@
       <HintPath>$(SolutionDir)\packages\LiteDB.3.1.0\lib\net35\LiteDB.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\Microsoft.AspNet.SignalR.Client.2.2.1\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
       <Private>True</Private>
@@ -140,6 +143,24 @@
       <HintPath>$(SolutionDir)\packages\SocketIoClientDotNet.0.9.13\lib\net45\SocketIoClientDotNet.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SuperSocket.Common, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.1.6.6.1\lib\net45\SuperSocket.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.Facility, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.1.6.6.1\lib\net45\SuperSocket.Facility.dll</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.SocketBase, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.1.6.6.1\lib\net45\SuperSocket.SocketBase.dll</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.SocketEngine, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.Engine.1.6.6.1\lib\net45\SuperSocket.SocketEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.SocketService, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.Engine.1.6.6.1\lib\net45\SuperSocket.SocketService.exe</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.WebSocket, Version=1.6.6.1, Culture=neutral, PublicKeyToken=6c80000676988ebb, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\SuperSocket.WebSocket.1.6.6.1\lib\net45\SuperSocket.WebSocket.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
@@ -148,6 +169,7 @@
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Console, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
     </Reference>
@@ -217,6 +239,9 @@
     </Reference>
     <Reference Include="WebDriver.Support, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\Selenium.Support.3.3.0\lib\net40\WebDriver.Support.dll</HintPath>
+    </Reference>
+    <Reference Include="websocket-sharp, Version=1.0.2.59611, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
+      <HintPath>$(SolutionDir)\packages\WebSocketSharp.1.0.3-rc11\lib\websocket-sharp.dll</HintPath>
     </Reference>
     <Reference Include="WebSocket4Net, Version=0.14.1.0, Culture=neutral, PublicKeyToken=eb4e154b696bf72a, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\WebSocket4Net.0.14.1\lib\net45\WebSocket4Net.dll</HintPath>
@@ -427,6 +452,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Service\BotDataSocketClient.cs" />
     <Compile Include="Service\TelegramCommand\ICommand.cs" />
     <Compile Include="Service\TelegramCommand\LocCommand.cs" />
     <Compile Include="Service\TelegramUtils.cs" />
@@ -456,6 +482,48 @@
     <Compile Include="Service\TelegramService.cs" />
     <Compile Include="Model\Settings\LogicSettings.cs" />
     <Compile Include="Service\MapzenDirectionsService.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\DropItemHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\EvolvePokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\FastpokemapHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\FavoritePokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\HumanSnipePriorityPokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\HumanSnipeRemovePokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\LevelUpPokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\SetConfigHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\SetMoveToTargetHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\SetTrainerNicknameHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\TransferPokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\ActionCommands\UpgradePokemonHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\EncodingHelper.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\ConfigResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\EggListResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\ItemListResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\PokemonListResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\SnipeListResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\TrainerProfileResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Events\WebResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetConfigHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetEggListHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetItemsListHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetPokemonListHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetPokemonSettingsHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetPokemonSnipeListHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\GetTrainerProfileHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Helpers\ConfigWeb.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Helpers\EggListWeb.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Helpers\PokemonListWeb.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Helpers\TrainerProfileWeb.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetConfigTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetEggListTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetItemListTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetPokemonListTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetPokemonSettingsTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetPokemonSnipeListTask.cs" />
+    <Compile Include="Service\WebSocketHandler\GetCommands\Tasks\GetTrainerProfileTask.cs" />
+    <Compile Include="Service\WebSocketHandler\IWebSocketRequestHandler.cs" />
+    <Compile Include="Service\WebSocketHandler\IWebSocketResponce.cs" />
+    <Compile Include="Service\WebSocketHandler\WebSocketEventManager.cs" />
+    <Compile Include="Service\WebSocketInterface.cs" />
     <Compile Include="Service\YoursDirectionsService.cs" />
     <Compile Include="State\BlockableScope.cs" />
     <Compile Include="State\BotSwitcherState.cs" />
@@ -582,6 +650,8 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="config.xlsm" />
+    <None Include="Config\log4net.config" />
+    <None Include="Config\log4net.unix.config" />
     <None Include="packages.config" />
     <None Include="Resources\msvc.cer" />
   </ItemGroup>
