--- a/packages.config
+++ b/packages.config
@@ -9,6 +9,7 @@
   <package id="Google.Protobuf" version="3.2.0" targetFramework="net462" />
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.0" targetFramework="net462" />
   <package id="LiteDB" version="3.1.0" targetFramework="net462" />
+  <package id="log4net" version="2.0.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
@@ -22,6 +23,9 @@
   <package id="Selenium.WebDriver" version="3.3.0" targetFramework="net462" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net462" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net462" />
+  <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
+  <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
+  <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
@@ -67,4 +71,5 @@
   <package id="Telegram.Bot" version="10.4.0" targetFramework="net462" />
   <package id="TinyIoC" version="1.3" targetFramework="net462" developmentDependency="true" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net462" />
+  <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net462" />
 </packages>
