--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,14 @@
-version: 1.0.{build}
+version: 1.0.0.{build}
+branches:
+  only:
+  - master
+skip_tags: true
+image: Visual Studio 2017
+configuration: Release
+platform: x86
+# environment variables
+environment:
+  SolutionDirectory: .
 before_build:
 - cmd: >-
     sed -i "s#$(SolutionDir)#.#g" PoGo.NecroBot.Logic.csproj
