--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,72 @@
-version: 1.0.0.{build}
-branches:
-  only:
-  - master
-skip_tags: true
+#---------------------------------#
+#      general configuration      #
+#---------------------------------#
+
+# version format
+version: 0.0.0.{build}
+
+# Do not build on tags
+skip_tags: false
+
+# Start builds on tags only
+skip_non_tags: false
+
+# Skipping commits affecting specific files
+skip_commits:
+  files:
+  - '**\AssemblyInfo.*'
+  - 'CHANGELOG.md'
+
+# 
+pull_requests:
+  do_not_increment_build_number: true
+  
+#---------------------------------#
+#    environment configuration    #
+#---------------------------------#
+
+# Build worker image (VM template)
 image: Visual Studio 2017
-configuration: Release
-platform: x86
+
+# scripts that are called at very beginning, before repo cloning
+# clone directory
+clone_folder: c:\projects\rocketbot2
+
+# fetch repository as zip archive
+shallow_clone: false
+
+# set clone depth
+# clone entire repository history if not defined
+#clone_depth:  5
+
 # environment variables
-environment:
-  SolutionDirectory: .
-before_build:
-- cmd: >-
-    sed -i "s#$(SolutionDir)#.#g" PoGo.NecroBot.Logic.csproj
 
-    git clone -q --branch=master https://github.com/TheUnnamedOrganisation/POGOProtos.git POGOProtos
+# build cache to preserve files/folders between builds
+#cache:
+#  - packages -> **\packages.config  # preserve packages directory in the root of build folder but will reset it if packages.config is modified
+#  - '%LocalAppData%\NuGet\Cache'
 
-    sed -i "s#$(SolutionDir)#..#g" POGOProtos/POGOProtos.csproj
+# scripts that run after cloning repository
+install:
+ - git clone -q --branch=master https://github.com/TheUnnamedOrganisation/POGOProtos.git POGOProtos
+ - sed -i "s#$(SolutionDir)#..#g" POGOProtos/POGOProtos.csproj
+ - git clone -q --branch=master https://github.com/TheUnnamedOrganisation/FeroxRev.git FeroxRev
+ - sed -i "s#$(SolutionDir)#..#g" FeroxRev/PokemonGo.RocketAPI.csproj
 
-    git clone -q --branch=master https://github.com/TheUnnamedOrganisation/FeroxRev.git FeroxRev
+platform: x86
 
-    sed -i "s#$(SolutionDir)#..#g" FeroxRev/PokemonGo.RocketAPI.csproj
+configuration: Release
 
-    nuget restore -OutputDirectory packages
 build:
   verbosity: minimal
+
+before_build:
+  - nuget restore
+
+before_package:
+
+after_build:
+
+build_script:
+
+test: off
