--- a/packages.config
+++ b/packages.config
@@ -6,8 +6,17 @@
   <package id="EPPlus" version="4.1.0" targetFramework="net462" />
   <package id="Geocoding.net" version="3.6.0" targetFramework="net462" />
   <package id="GeoCoordinate.NetStandard1" version="1.0.0" targetFramework="net462" />
+  <package id="Google.Api.CommonProtos" version="1.0.0" targetFramework="net462" />
+  <package id="Google.Api.Gax" version="1.0.1" targetFramework="net462" />
+  <package id="Google.Api.Gax.Grpc" version="1.0.1" targetFramework="net462" />
+  <package id="Google.Apis" version="1.25.0" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.25.0" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.25.0" targetFramework="net462" />
+  <package id="Google.Cloud.Iam.V1" version="1.0.0-beta09" targetFramework="net462" />
   <package id="Google.Protobuf" version="3.2.0" targetFramework="net462" />
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.0" targetFramework="net462" />
+  <package id="Grpc.Auth" version="1.2.2" targetFramework="net462" />
+  <package id="Grpc.Core" version="1.2.2" targetFramework="net462" />
   <package id="LiteDB" version="3.1.0" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.1" targetFramework="net462" />
@@ -35,6 +44,7 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net462" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net462" />
@@ -72,4 +82,5 @@
   <package id="TinyIoC" version="1.3" targetFramework="net462" developmentDependency="true" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net462" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net462" />
+  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
